# Strata

./: .gitattributes  CANONICAL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAW.md  LICENSE  README.md  VERSIONING.md  roadmap.md
.github/workflows/: js.yml  northstar-t1.yml  northstar-t2.yml  northstar-t3.yml  rust.yml
docs/: README.md  SUMMARY.md
docs/appendix/: common-misconceptions.md  comparison-to-other-formats.md  faq.md  glossary.md  security-conciderations.md
docs/contributing/: adding-vectors.md  canonical-change-process.md  code-of-conduct.md  how-to-contribute.md  what-changes-are-acceptable.md
docs/core-concepts/: canonical-encoding.md  determinism-and-hashing.md  encoding-vs-decoding.md  strata-text-vs-strata-core-binary.md  strictness-and-failure-semantics.md  value-model.md
docs/interoperability/: http-transport.md  rust-js-parity.md  streaming-and-framing.md  wire-formats.md  (+2 more)
northstar/T1-wire-determinism/backend-rs/: Cargo.toml
northstar/T1-wire-determinism/backend-rs/src/: main.rs
strata-js/: README.md  index.js  package-lock.json  package.json  tsconfig.json
strata-rs/: Cargo.toml  README.md
strata-rs/src/: decode.rs  decode_tests.rs  encode.rs  encode_tests.rs  error.rs  framing.rs  hash.rs  hash_tests.rs  lexer.rs  lexer_tests.rs  lib.rs  macros.rs  macros_tests.rs  main.rs  parser.rs  parser_tests.rs  roundtrip_tests.rs  semantic_vectors.rs  value.rs
strata-rs/tests/: cli.rs
strata-spec/: strata-northstar-v1.md  strata-northstar-v2.1.md  strata-northstar-v2.md  strata-northstar-v3.md  strata-northstar-v4.md
vectors/: README.md
(+112 files in other folders)
