[package]
name = "strata-rs"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Deterministic binary data format with canonical encoding"
repository = "https://github.com/Emagjby/Strata"
readme = "README.md"

[lib]
name = "strata"

[[bin]]
name = "strata"
path = "src/bin/strata.rs"

[dependencies]
blake3 = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.1"
hex = "0.4"
predicates = "3.1.3"
