[package]
name = "backend-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-rs = { path = "../../../strata-rs/" }
tower-http = { version = "0.5", features = ["cors"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
hex = "0.4.3"
